Tuning the model for better performance

--- a/Notebook/emotion_build.ipynb
+++ b/Notebook/emotion_build.ipynb
@@ -219,6 +219,18 @@
     "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
+    "# 4th Convolutional Layer \n",
+    "model.add(Conv2D(512, (3, 3), padding='same', activation='relu'))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
+    "# 5th Convolutional Layer \n",
+    "model.add(Conv2D(512, (3, 3), padding='same', activation='relu'))\n",
+    "model.add(BatchNormalization())\n",
+    "model.add(MaxPooling2D(pool_size=(2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
     "# Flatten the layers\n",
     "model.add(Flatten())\n",
     "\n",
@@ -284,7 +296,7 @@
    ],
    "source": [
     "# Train the model\n",
-    "history = model.fit(X_train, y_train, batch_size=64, epochs=30, validation_data=(X_test, y_test), verbose=1)\n",
+    "history = model.fit(X_train, y_train, batch_size=32, epochs=30, validation_data=(X_test, y_test), verbose=1)\n",
     "\n",
     "# Save the model\n",
     "model.save('../Models/facial_emotion_detection_model.h5')"
