--- a/Notebook/emotion_build_mesh.ipynb
+++ b/Notebook/emotion_build_mesh.ipynb
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -344,54 +344,54 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m201s\u001b[0m 484ms/step - accuracy: 0.2410 - loss: 1.8354 - val_accuracy: 0.3494 - val_loss: 1.6508\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m205s\u001b[0m 249ms/step - accuracy: 0.4674 - loss: 1.3804 - val_accuracy: 0.5065 - val_loss: 1.3111\n",
       "Epoch 2/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m192s\u001b[0m 465ms/step - accuracy: 0.3490 - loss: 1.6298 - val_accuracy: 0.4041 - val_loss: 1.4852\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m281s\u001b[0m 273ms/step - accuracy: 0.4773 - loss: 1.3731 - val_accuracy: 0.5065 - val_loss: 1.2992\n",
       "Epoch 3/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m187s\u001b[0m 454ms/step - accuracy: 0.3966 - loss: 1.5505 - val_accuracy: 0.4430 - val_loss: 1.4635\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m224s\u001b[0m 272ms/step - accuracy: 0.4793 - loss: 1.3654 - val_accuracy: 0.4994 - val_loss: 1.3149\n",
       "Epoch 4/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m191s\u001b[0m 464ms/step - accuracy: 0.4223 - loss: 1.4963 - val_accuracy: 0.4549 - val_loss: 1.4200\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m203s\u001b[0m 247ms/step - accuracy: 0.4777 - loss: 1.3533 - val_accuracy: 0.4970 - val_loss: 1.3109\n",
       "Epoch 5/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m180s\u001b[0m 436ms/step - accuracy: 0.4337 - loss: 1.4781 - val_accuracy: 0.4597 - val_loss: 1.3908\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m198s\u001b[0m 240ms/step - accuracy: 0.4810 - loss: 1.3419 - val_accuracy: 0.5084 - val_loss: 1.2877\n",
       "Epoch 6/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m179s\u001b[0m 434ms/step - accuracy: 0.4404 - loss: 1.4630 - val_accuracy: 0.4780 - val_loss: 1.3896\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m202s\u001b[0m 246ms/step - accuracy: 0.4826 - loss: 1.3493 - val_accuracy: 0.5067 - val_loss: 1.3088\n",
       "Epoch 7/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m177s\u001b[0m 429ms/step - accuracy: 0.4484 - loss: 1.4356 - val_accuracy: 0.4733 - val_loss: 1.3659\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m199s\u001b[0m 241ms/step - accuracy: 0.4827 - loss: 1.3396 - val_accuracy: 0.5102 - val_loss: 1.2817\n",
       "Epoch 8/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m177s\u001b[0m 429ms/step - accuracy: 0.4535 - loss: 1.4278 - val_accuracy: 0.4799 - val_loss: 1.3586\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m195s\u001b[0m 237ms/step - accuracy: 0.4910 - loss: 1.3400 - val_accuracy: 0.5210 - val_loss: 1.2696\n",
       "Epoch 9/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m174s\u001b[0m 423ms/step - accuracy: 0.4651 - loss: 1.3958 - val_accuracy: 0.4853 - val_loss: 1.3624\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m204s\u001b[0m 240ms/step - accuracy: 0.4900 - loss: 1.3377 - val_accuracy: 0.5217 - val_loss: 1.2777\n",
       "Epoch 10/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m166s\u001b[0m 403ms/step - accuracy: 0.4653 - loss: 1.4012 - val_accuracy: 0.4979 - val_loss: 1.3194\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m178s\u001b[0m 216ms/step - accuracy: 0.4890 - loss: 1.3346 - val_accuracy: 0.5163 - val_loss: 1.2706\n",
       "Epoch 11/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m167s\u001b[0m 405ms/step - accuracy: 0.4700 - loss: 1.3817 - val_accuracy: 0.4851 - val_loss: 1.3493\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m179s\u001b[0m 217ms/step - accuracy: 0.4893 - loss: 1.3296 - val_accuracy: 0.5120 - val_loss: 1.2823\n",
       "Epoch 12/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m198s\u001b[0m 395ms/step - accuracy: 0.4695 - loss: 1.3856 - val_accuracy: 0.5038 - val_loss: 1.3133\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m177s\u001b[0m 215ms/step - accuracy: 0.4909 - loss: 1.3295 - val_accuracy: 0.5153 - val_loss: 1.2718\n",
       "Epoch 13/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m190s\u001b[0m 462ms/step - accuracy: 0.4617 - loss: 1.3991 - val_accuracy: 0.5000 - val_loss: 1.3104\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m177s\u001b[0m 215ms/step - accuracy: 0.4989 - loss: 1.3102 - val_accuracy: 0.5184 - val_loss: 1.2639\n",
       "Epoch 14/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m194s\u001b[0m 470ms/step - accuracy: 0.4672 - loss: 1.3878 - val_accuracy: 0.4875 - val_loss: 1.3314\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m178s\u001b[0m 216ms/step - accuracy: 0.4911 - loss: 1.3197 - val_accuracy: 0.5207 - val_loss: 1.2558\n",
       "Epoch 15/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m196s\u001b[0m 455ms/step - accuracy: 0.4731 - loss: 1.3714 - val_accuracy: 0.5003 - val_loss: 1.3119\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m161s\u001b[0m 195ms/step - accuracy: 0.4982 - loss: 1.3101 - val_accuracy: 0.5237 - val_loss: 1.2574\n",
       "Epoch 16/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m195s\u001b[0m 473ms/step - accuracy: 0.4687 - loss: 1.3714 - val_accuracy: 0.5014 - val_loss: 1.2955\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m159s\u001b[0m 193ms/step - accuracy: 0.4946 - loss: 1.3126 - val_accuracy: 0.5199 - val_loss: 1.2594\n",
       "Epoch 17/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m186s\u001b[0m 451ms/step - accuracy: 0.4741 - loss: 1.3657 - val_accuracy: 0.5061 - val_loss: 1.3029\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m160s\u001b[0m 194ms/step - accuracy: 0.4979 - loss: 1.3104 - val_accuracy: 0.5217 - val_loss: 1.2517\n",
       "Epoch 18/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m182s\u001b[0m 442ms/step - accuracy: 0.4774 - loss: 1.3718 - val_accuracy: 0.5043 - val_loss: 1.3026\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m159s\u001b[0m 193ms/step - accuracy: 0.5070 - loss: 1.2937 - val_accuracy: 0.5112 - val_loss: 1.2820\n",
       "Epoch 19/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m221s\u001b[0m 537ms/step - accuracy: 0.4781 - loss: 1.3635 - val_accuracy: 0.4980 - val_loss: 1.3114\n",
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m159s\u001b[0m 194ms/step - accuracy: 0.5024 - loss: 1.2859 - val_accuracy: 0.5195 - val_loss: 1.2543\n",
       "Epoch 20/20\n",
-      "\u001b[1m412/412\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m240s\u001b[0m 582ms/step - accuracy: 0.4784 - loss: 1.3663 - val_accuracy: 0.5097 - val_loss: 1.2924\n",
-      "\u001b[1m206/206\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m21s\u001b[0m 103ms/step - accuracy: 0.5202 - loss: 1.2684\n",
-      "Test loss: 1.2924387454986572\n",
-      "Test accuracy: 0.5097264647483826\n"
+      "\u001b[1m823/823\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m166s\u001b[0m 201ms/step - accuracy: 0.5050 - loss: 1.2909 - val_accuracy: 0.5225 - val_loss: 1.2523\n",
+      "\u001b[1m206/206\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m12s\u001b[0m 59ms/step - accuracy: 0.5325 - loss: 1.2258\n",
+      "Test loss: 1.2523159980773926\n",
+      "Test accuracy: 0.5224924087524414\n"
      ]
     }
    ],
    "source": [
     "# Train the model\n",
-    "history = model.fit(X_train, y_train, epochs=20, batch_size=64, validation_data=(X_test, y_test))\n",
+    "history = model.fit(X_train, y_train, epochs=20, batch_size=32, validation_data=(X_test, y_test))\n",
     "\n",
     "# Evaluate the model\n",
     "score = model.evaluate(X_test, y_test)\n",
@@ -401,9 +401,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:absl:You are saving your model as an HDF5 file via `model.save()` or `keras.saving.save_model(model)`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')` or `keras.saving.save_model(model, 'my_model.keras')`. \n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model saved to disk as 'emotion_detection_model.h5'\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the trained model\n",
     "model.save('emotion_detection_model.h5')\n",
