--- a/Notebook/emotion_build_mesh.ipynb
+++ b/Notebook/emotion_build_mesh.ipynb
@@ -421,7 +421,7 @@
    ],
    "source": [
     "# Save the trained model\n",
-    "model.save('emotion_detection_model.h5')\n",
+    "model.save('../Models/emotion_detection_model.h5')\n",
     "print(\"Model saved to disk as 'emotion_detection_model.h5'\")"
    ]
   }
